# mcp-insee-entreprises

./: .env.example  .gitignore  README.md  pyproject.toml
documentation/: API_RECHERCHE_ENTREPRISES.md
openapi_schemas/: openapi_insee_sirene.json  openapi_recherche_entreprises.json
scripts/: insee_api.sh
src/insee_entreprises/: __init__.py  geo_mapping.py  section_mapping.py  server.py
src/insee_entreprises/data/: naf_niveau_1.csv
