[project]
name = "insee-entreprises"
version = "0.1.0"
description = "MCP Server for INSEE SIRENE API - Search French enterprises by SIREN, SIRET, name, and more"
readme = "README.md"
authors = [
    { name = "David Scanu", email = "david_scanu@carrefour.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
insee-entreprises = "insee_entreprises.server:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
